kubernetes/infrastructure/core/kube-system/middleware.strip-traefik-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-traefik-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /traefik
