kubernetes/infrastructure/core/kube-system/ingress.traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /traefik-dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
